fix: add overflow-auto to #root

--- a/miniapp-frontend/src/index.scss
+++ b/miniapp-frontend/src/index.scss
@@ -22,5 +22,5 @@ html, body {
 }
 
 #root {
-  @apply flex h-screen w-screen items-center justify-center bg-background text-text;
+  @apply flex h-screen w-screen items-center justify-center bg-background text-text overflow-auto;
 }
